--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.HomeActivity">
 
+
     <LinearLayout
         android:id="@+id/searchLayout"
         android:layout_width="match_parent"
@@ -15,6 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <EditText
             android:id="@+id/search_bar"
             android:layout_width="wrap_content"
@@ -23,10 +25,12 @@
             android:layout_weight="1.9"
             android:hint="Search tasks..." />
 
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:padding="10dp"
             android:layout_marginStart="16dp"
             android:src="@drawable/ic_search" />
     </LinearLayout>
